--- a/.github/workflows/myback.yml
+++ b/.github/workflows/myback.yml
@@ -31,7 +31,7 @@ jobs:
           python-version: "3.7"
       
       - name: Generate deployment package 
-        run: zip -r deploy.zip . -x '*.git*'
+        run: zip -r flask_deploy.zip . -x '*.git*'
         
       - name: Get timestamp
         uses: gerred/actions/current-time@master
