--- a/.github/workflows/myback.yml
+++ b/.github/workflows/myback.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches:
       - main
-
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,7 +31,7 @@ jobs:
           python-version: "3.7"
       
       - name: Generate deployment package 
-        run: zip -r flask_deploy.zip . -x '*.git*'
+        run: zip -r deploy.zip . -x '*.git*'
         
       - name: Get timestamp
         uses: gerred/actions/current-time@master
@@ -49,13 +49,13 @@ jobs:
           flags: 'g'
           
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
+        uses: einaregilsson/beanstalk-deploy@v19
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: Capstone_Flask
           environment_name: Capstoneflask-env  
           wait_for_deployment: true  
-          version_label: "python-${{ steps.format-time.outputs.replaced }}"
+          version_label: "python-${{steps.current-time.outputs.formattedTime}}"
           region: ap-northeast-2  
-          deployment_package: flask_deploy.zip  
+          deployment_package: deploy.zip  
