--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,7 @@
-absl-py==1.0.0
-aiohttp @ file:///C:/ci/aiohttp_1637857239634/work
-aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
-astor==0.8.1
-astunparse==1.6.3
-async-timeout @ file:///tmp/build/80754af9/async-timeout_1637851218186/work
-asynctest==0.13.0
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-blinker==1.4
-brotlipy==0.7.0
-cached-property==1.5.2
-cachetools==4.2.4
-cchardet==2.1.7
-certifi==2021.10.8
-cffi @ file:///C:/ci/cffi_1636542104204/work
-chardet==4.0.0
-charset-normalizer==2.0.8
-click==8.0.3
-colorama==0.4.4
-cryptography @ file:///C:/ci/cryptography_1633502396740/work
-cycler==0.11.0
-fastprogress==1.0.0
-filelock==3.4.0
-Flask @ file:///tmp/build/80754af9/flask_1634118196080/work
-flatbuffers==2.0
-fonttools==4.28.2
-frozenlist @ file:///C:/ci/frozenlist_1637767267867/work
-gast==0.3.3
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
-grpcio @ file:///C:/ci/grpcio_1637590993074/work
-h5py==2.10.0
-huggingface-hub==0.1.2
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata==4.8.2
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jieba==0.42.1
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
-joblib==1.1.0
-keras==2.7.0
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-keras-bert==0.88.0
-keras-embed-sim==0.9.0
-keras-layer-normalization==0.15.0
-keras-multi-head==0.28.0
-keras-pos-embd==0.12.0
-keras-position-wise-feed-forward==0.7.0
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
-keras-self-attention==0.50.0
-keras-transformer==0.39.0
-kiwisolver==1.3.2
 ktrain==0.28.3
-langdetect==1.0.9
-libclang==12.0.0
-Markdown==3.3.6
-MarkupSafe @ file:///C:/ci/markupsafe_1621528383308/work
-matplotlib==3.4.3
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186163140/work
-mkl-service==2.4.0
-multidict @ file:///C:/ci/multidict_1607367865052/work
-numpy==1.19.5
-oauthlib @ file:///tmp/build/80754af9/oauthlib_1623060228408/work
-opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
-packaging==21.3
 pandas==1.1.5
-Pillow==8.4.0
-protobuf==3.19.1
-pyasn1 @ file:///Users/ktietz/demo/mc3/conda-bld/pyasn1_1629708007385/work
-pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-PyJWT @ file:///C:/ci/pyjwt_1619651810943/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1635333100036/work
-pyparsing==3.0.6
-pyreadline==2.1
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil==2.8.2
-pytz==2021.3
-PyYAML==6.0
-regex==2021.11.10
-requests @ file:///tmp/build/80754af9/requests_1629994808627/work
-requests-oauthlib==1.3.0
-rsa==4.8
-sacremoses==0.0.46
-scikit-learn==0.23.2
-scipy @ file:///C:/ci/scipy_1630606897162/work
-sentencepiece==0.1.96
-seqeval==0.0.19
-setuptools-scm==6.3.2
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-syntok==1.3.1
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
+numpy==1.16.0
 tensorflow==2.3.0
-tensorflow-estimator @ file:///home/builder/adipietro/tf/tensorflow-estimator_1630508970172/work/tensorflow_estimator-2.6.0-py2.py3-none-any.whl
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==1.1.0
-threadpoolctl==3.0.0
-tokenizers==0.9.4
-tomli==1.2.2
-tqdm==4.62.3
-transformers==4.2.2
-typing_extensions==4.0.0
-urllib3==1.26.7
-Werkzeug @ file:///tmp/build/80754af9/werkzeug_1635505089296/work
-Whoosh==2.7.4
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
-wincertstore==0.2
-wrapt==1.13.3
-yarl @ file:///C:/ci/yarl_1606940114600/work
-zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
+h5py==2.10.0
+flask_restful
+flask
